adding more debug commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,13 +28,14 @@ jobs:
           command: |
             touch .env
             printf "COMPOSE_PROJECT_NAME=isle_test \nBASE_DOMAIN=isle.localdomain \nCONTAINER_SHORT_ID=td \nCOMPOSE_FILE=docker-compose.test.yml" > .env
+            cat .env
       - run:
           name: Get docker-compose 1.25.5
           command: |
             sudo curl -L "https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
       # First build the tomcat image then startup all containers like usual
-      - run: ls
+      - run: ls -lha
       - run: docker-compose -f tomcat_build.yaml build docker-compose up -d
       - run: sleep 40
       - run:
