--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,8 @@ jobs:
             sudo chmod +x /usr/local/bin/docker-compose
       # First build the tomcat image then startup all containers like usual
       - run: ls -lha
-      - run: docker-compose -f tomcat_build.yaml build docker-compose up -d
+      - run: docker-compose -f tomcat_build.yml build
+      - run: docker-compose up -d
       - run: sleep 40
       - run:
           name: Start container and verify it's working
