--- a/tomcat_build.yml
+++ b/tomcat_build.yml
@@ -5,7 +5,6 @@ version: '3.7'
 services:
 
   tomcat:
-    image: borndigital/isle-tomcat:ISLE-v.1.5-dev
+    image: ${DOCKERHUB_REPO}/isle-tomcat:${DOCKER_BUILD_TAG}
     build:
-      context: https://github.com/Born-Digital-US/isle-tomcat.git#ISLE-v.1.5-dev
-    # args:
+      context: https://${GIT_HOSTER}/${GIT_USER}/isle-tomcat.git#${BUILD_BRANCH}
