--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,9 @@ jobs:
       # First build the tomcat image then startup all containers like usual
       - run: cd ~/build/ISLE && docker-compose -f tomcat_build.yml build
       - run: cd ~/build/ISLE && docker-compose up -d
+      - run: docker ps -a
       - run: sleep 40
+      - run: docker ps -a
       - run:
           name: Start container and verify it's working
           command: |
