--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: Start container and verify it's working
           command: |
             set -x
-            docker exec -it isle-apache-td bash -c "sh /utility-scripts/isle_drupal_build_tools/isle_islandora_installer.sh"
+            docker exec -it isle-apache-td bash /utility-scripts/isle_drupal_build_tools/isle_islandora_installer.sh                                           
           no_output_timeout: 20m
       - run:
           name: Drush en basic dependencies
