Fixes from version and added new BD/ICG build info

--- a/.env
+++ b/.env
@@ -8,8 +8,16 @@ BASE_DOMAIN=isle.localdomain
 CONTAINER_SHORT_ID=td
 COMPOSE_FILE=docker-compose.test.yml
 
+# Born-Digital Build ENVS
 BUILD_BRANCH=ISLE-v.1.5-dev
 DOCKER_BUILD_TAG=1.5-dev
 DOCKERHUB_REPO=borndigital
 GIT_HOSTER=github.com
 GIT_USER=Born-Digital-US
+
+# ICG Build ENVS
+# BUILD_BRANCH=master
+# DOCKER_BUILD_TAG=1.5
+# DOCKERHUB_REPO=islandoracollabgroup
+# GIT_HOSTER=github.com
+# GIT_USER=Islandora-Collaboration-Group
